--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 .header{
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 100%;
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(images/banner.png);
     background-position: center;
     background-size: cover;
