--- a/style.css
+++ b/style.css
@@ -146,8 +146,7 @@ nav .fa{
     border: 1px rgba(255,204,204,0.2) solid;
     background-color: rgba(255,204,204,0.2);
     border-radius: 6px;
-    margin-right: 3rem;
-    width:70%;
+    width:300px;
     padding: 1.5rem;
     margin-top: 3rem;
 }
@@ -165,8 +164,15 @@ nav .fa{
 @media(max-width:700px) {
     .course-cards{
         flex-direction: column;
-        margin-left: 7%;
         font-size: 13px;
+    }
+    .card{
+        width:250px;
+        text-align: center;
+        align-self: center;
+    }
+    .courses h1{
+        font-size: large;
     }
     
 }
@@ -188,9 +194,10 @@ nav .fa{
 }
 .feature-cards{
     display: flex;
-    margin: auto;
+    align-self: center;
     text-align: center;
     padding-top: 50px;
+    margin-left: 1%;
 }
 .single-feature-card img{
     border-radius: 10px;
@@ -238,8 +245,19 @@ nav .fa{
 @media(max-width:700px) {
     .feature-cards{
         flex-direction: column;
+        align-self: center;
         
     }
+.single-feature-card {
+    align-self: center;
+    align-content: center;
+    margin-left: 3%;
+}
+.key-features h1{
+    font-size: x-large;
+}
+
+
     
 }
 
@@ -261,6 +279,7 @@ nav .fa{
 .facilites{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 4rem;
 }
 .facility-column img{
     margin-top: 10vh;
@@ -305,6 +324,9 @@ font-size: 14px;
         flex-direction: column;
         justify-content: center;
     }
+    .our-facilities h1{
+    font-size: x-large;
+    }
     
 }
 
@@ -333,4 +355,14 @@ font-size: 14px;
 .social i{
     margin-right: 1.4rem;
     font-size: 1.3rem;
+}
+@media(max-width:700px){
+    .footer{
+        border-radius: 0px;
+        min-height: 60vh;
+    }
+    .social{
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+    }
 }
